RMX2001: Do not cleanup unused fingerprints
Change-Id: I6095236b31dcc8fb4ae966fde5502df73c53ecb5
Signed-off-by: SamarV-121 <samarvispute121@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -401,4 +401,6 @@
         <item>0,1</item>
     </string-array>
 
+    <!-- Whether to cleanup fingerprints upon connection to the daemon and when user switches -->
+    <bool name="config_cleanupUnusedFingerprints">false</bool>
 </resources>
